# CooperativeQA

./: README.md  embedder.ipynb  llms-hw3.ipynb  pragmaticqa.ipynb  pyproject.toml  rag.ipynb  semanticF1.ipynb
